--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,10 @@
  .nav-link.active {
    background-color: #dfd0b8 !important; /* Important to override Bootstrap's default styles */
   }
+
+  .service-experience {
+  margin: 10px 10px; /* Adds some spacing above and below the text */
+  font-weight: bold;
+  font-size: 1.5rem;/* Makes the text bold */
+}
+
