--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,12 @@
    background-color: #dfd0b8 !important; /* Important to override Bootstrap's default styles */
   }
 
-  .service-experience {
-  margin: 10px 10px; /* Adds some spacing above and below the text */
-  font-weight: bold;
-  font-size: 1.5rem;/* Makes the text bold */
+  #itd2-header .service-experience p {
+  margin: 0px 12px; /* Adds some spacing above and below the text */
+  font-weight: 600;
+  font-size: 2rem;
+  color: #1a5286 !important;
 }
+
+
 
